# automl

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pilot.py  pyproject.toml  streamlit_app.py
docs/: orchestrator-project-presentation.html  orchestrator-service.drawio
orchestrator/: api.py  artifacts.py  bus.py  codex_runner.py  config.py  db.py  main.py  planner.py  policy.py  protocol.py  ralph.py  schemas.py  service.py  session.py  verifier.py
orchestrator/app/: api.py  main.py
orchestrator/application/: __init__.py  dto.py  mappers.py  ports.py
orchestrator/domain/: __init__.py  errors.py  evaluation_contract.py  events.py  plan_contract.py  quality_gate.py  run_aggregate.py  state_machine.py
orchestrator/execution/: __init__.py  artifacts.py  codex_cli.py  codex_prompting.py  codex_runner.py  command_recovery.py  command_sequence.py  intent_validation.py  metric_parsing.py  policy.py  runner_models.py  shell_command_normalizer.py  stepio_support.py  subprocess_support.py  verifier.py  workspace_metrics_reader.py
orchestrator/infrastructure/: README.md  __init__.py
orchestrator/knowledge/: __init__.py
orchestrator/persistence/: __init__.py  artifact_recovery.py  common.py  db.py  event_repository.py  experiment_attempts_repository.py  maintenance_repository.py  pdf_repository.py  policy_decisions_repository.py  run_history_repository.py  schemas.py  (+7 more)
scripts/: check_arch_imports.py
tests/: test_application_services.py  test_domain_state_machine.py  test_orchestrator.py  test_verifier_metrics.py
(+44 files in other folders)
